Finishing the UI

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,25 @@ main{
 	padding-bottom:20px;
 }
 
+label{
+	display:inline-block;
+	width:180px;
+}
+
+input[type="text"]{
+	width:97%;
+	padding:4px;
+	border-radius:5px;
+	border:1px #ccc solid;
+}
+
+input[type="number"]{
+	width:50px;
+	padding:4px;
+	border-radius:5px;
+	border:1px #ccc solid;
+}
+
 a.start{
 	display:inline-block;
 	color:#6666;
@@ -58,4 +77,10 @@ a.start{
 	border:#ccc dotted 1px;
 	
 	margin:20px 0 10px 0;	
+}
+
+@media only screen and (max-width:960px){
+	.container{
+		width:80%;
+	}
 }
